--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -78,14 +78,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Presenters\GraphsTabPresenter.cs" />
-    <Compile Include="Presenters\LogicTabPresenter.cs" />
+    <Compile Include="Presenters\GraphsPresenter.cs" />
+    <Compile Include="Presenters\LogicPresenter.cs" />
     <Compile Include="Presenters\LogicWorkspace.cs" />
     <Compile Include="Presenters\LogicWorkspaceItem.cs" />
-    <Compile Include="Presenters\MathTabPresenter.cs" />
+    <Compile Include="Presenters\MathPresenter.cs" />
     <Compile Include="Presenters\MathWorkspace.cs" />
     <Compile Include="Presenters\MathWorkspaceItem.cs" />
-    <Compile Include="Presenters\TruthTableTabPresenter.cs" />
+    <Compile Include="Presenters\TruthTablePresenter.cs" />
     <Compile Include="Presenters\Updater.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -115,12 +115,24 @@
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\DrawingCanvas.cs" />
+    <Compile Include="Views\GraphsControl.xaml.cs">
+      <DependentUpon>GraphsControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\IGraphsView.cs" />
+    <Compile Include="Views\ILogicView.cs" />
     <Compile Include="Views\IMainView.cs" />
+    <Compile Include="Views\IView.cs" />
+    <Compile Include="Views\LogicControl.xaml.cs">
+      <DependentUpon>LogicControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MainView.xaml.cs">
       <DependentUpon>MainView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\PlottingGraph.xaml.cs">
       <DependentUpon>PlottingGraph.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\TruthTableControl.xaml.cs">
+      <DependentUpon>TruthTableControl.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -134,7 +146,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="StylesForControls.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\AboutView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GraphsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\LogicControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -143,6 +167,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\PlottingGraph.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TruthTableControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
