--- a/xFunc/xFunc.csproj
+++ b/xFunc/xFunc.csproj
@@ -111,6 +111,7 @@
     <Compile Include="ViewModels\LogicWorkspaceItemViewModel.cs" />
     <Compile Include="ViewModels\MathWorkspaceItemViewModel.cs" />
     <Compile Include="ViewModels\TruthTableRowViewModel.cs" />
+    <Compile Include="ViewModels\VariableViewModel.cs" />
     <Compile Include="Views\AboutView.xaml.cs">
       <DependentUpon>AboutView.xaml</DependentUpon>
     </Compile>
@@ -136,6 +137,9 @@
     </Compile>
     <Compile Include="Views\TruthTableControl.xaml.cs">
       <DependentUpon>TruthTableControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\VariableView.xaml.cs">
+      <DependentUpon>VariableView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +182,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\TruthTableControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\VariableView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
