--- a/xFunc.Tests/xFunc.Tests.csproj
+++ b/xFunc.Tests/xFunc.Tests.csproj
@@ -70,14 +70,14 @@
     <Compile Include="Expressions\Maths\AbsTest.cs" />
     <Compile Include="Expressions\Maths\AddTest.cs" />
     <Compile Include="Expressions\Maths\BinaryTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\AndTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\EqualityTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\ImplicationTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\NAndTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\NorTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\NotTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\OrTest.cs" />
-    <Compile Include="Expressions\Maths\Bitwise\XOrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\AndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\ImplicationTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NAndTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NorTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\NotTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\OrTest.cs" />
+    <Compile Include="Expressions\Maths\LogicalAndBitwise\XOrTest.cs" />
     <Compile Include="Expressions\Maths\CeilTest.cs" />
     <Compile Include="Expressions\Maths\DefineTest.cs" />
     <Compile Include="Expressions\Maths\DelegateExpressionTest.cs" />
@@ -102,14 +102,6 @@
     <Compile Include="Expressions\Maths\LgTest.cs" />
     <Compile Include="Expressions\Maths\LbTest.cs" />
     <Compile Include="Expressions\Maths\LnTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\AndTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\EqualityTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\ImplicationTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\NAndTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\NOrTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\NotTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\OrTest.cs" />
-    <Compile Include="Expressions\Maths\LogicalAndBitwise\XOrTest.cs" />
     <Compile Include="Expressions\Maths\LogTest.cs" />
     <Compile Include="Expressions\Maths\Matrices\MatrixTest.cs" />
     <Compile Include="Expressions\Maths\Matrices\VectorTest.cs" />
